# threadkiller

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml
threadkiller/: __main__.py  config.py  handlers.py  strings.py
