[tool.poetry]
name = "threadkiller"
version = "1.0.2"
description = "A Telegram bot to delete messages sent outside of channel comment threads"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0a1"
cfig = {extras = ["cli"], version = "^0.2.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
